syntax = "proto3";

package knoway.listeners.v1alpha1;

import "google/protobuf/any.proto";
import "listeners/v1alpha1/common.proto";

option go_package = "knoway.dev/api/listeners/v1alpha1";

message ChatCompletionListener {
    string name                     = 1;
    repeated ListenerFilter filters = 2;
    Log access_log                  = 3;
}
